--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -24,7 +24,7 @@
           </div>
         </li>
       </ul>
-      <div class="itemBox JS_itemBox--children itemBox--children JS_children-closed">
+      <div class="itemBox JS_itemBox--children JS_children-closed">
         {% for item in group.items %}
           <ul class="itemBox__row itemBox__row--item JS_filterableCell">
             <li class="itemBox__cell itemBox__cell--permalink">
