--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -19,7 +19,7 @@
           </div>
         </li>
       </ul>
-      <div class="itemBox JS_itemBox--children itemBox--children">
+      <div class="itemBox JS_itemBox--children">
         <div class="itemBoxTable">
           <div class="itemBoxTable__body">
             {% for item in group.items %}
