--- a/_includes/javascript/selectedBlock-Include.html
+++ b/_includes/javascript/selectedBlock-Include.html
@@ -1,4 +1,4 @@
-<ul class="itemBox__row  JS_selectionTitleInclude">
+<ul class="itemBox__row itemBox__row--item JS_selectionTitleInclude">
   <li class="itemBox__cell itemBox__cell--action">
     <div class="itemBox__cellInner">
       <div class="itemBox__action">ऄ Include</div>
@@ -16,6 +16,6 @@
   </li>
 </ul>
 
-<div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenInclude">
+<div class="itemBox JS_itemBox--children JS_selectionChildrenInclude">
   <div class="itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable"></div>
 </div>
