--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -29,7 +29,7 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildren">
+    <div class="itemBox JS_itemBox--children JS_selectionChildren">
       <div class="itemBoxBody--sortable ui-sortable">
         <ul class="itemBox__row itemBox__row--item JS_selectionTitleInclude">
           <li class="itemBox__cell itemBox__cell--action JS_toggle">
@@ -49,7 +49,7 @@
           </li>
         </ul>
 
-        <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenInclude">
+        <div class="itemBox JS_itemBox--children JS_selectionChildrenInclude">
           <div class="itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
             <ul class="itemBox__row itemBox__row--item JS_filterableCell JS_sortable">
               <li class="itemBox__cell">
@@ -117,7 +117,7 @@
           </li>
         </ul>
 
-        <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenExclude">
+        <div class="itemBox JS_itemBox--children JS_selectionChildrenExclude">
           <div class="itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
               <li class="itemBox__cell">
@@ -183,8 +183,8 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_optionsChildren">
-      <ul class="itemBox__row">
+    <div class="itemBox JS_itemBox--children JS_optionsChildren">
+      <ul class="itemBox__row itemBox__row--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">अ Smart Dates</div>
@@ -197,7 +197,7 @@
         </li>
       </ul>
 
-      <div class="itemBox JS_itemBox--children itemBox--children">
+      <div class="itemBox JS_itemBox--children">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
             <div class="itemBox__cellInner ">
@@ -225,7 +225,7 @@
       </div>
       <!-- smart dates -->
 
-      <ul class="itemBox__row">
+      <ul class="itemBox__row itemBox__row--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">अ Simple Dates</div>
@@ -238,7 +238,7 @@
         </li>
       </ul>
 
-      <div class="itemBox JS_itemBox--children itemBox--children">
+      <div class="itemBox JS_itemBox--children">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
             <div class="itemBox__cellInner ">
@@ -267,7 +267,7 @@
       </div>
       <!-- simple dates -->
 
-      <ul class="itemBox__row">
+      <ul class="itemBox__row itemBox__row--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">अ Ranges</div>
@@ -280,7 +280,7 @@
         </li>
       </ul>
 
-      <div class="itemBox JS_itemBox--children itemBox--children">
+      <div class="itemBox JS_itemBox--children">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell">
             <div class="itemBox__cellInner">
@@ -308,7 +308,7 @@
       </div>
       <!-- ranges -->
 
-      <ul class="itemBox__row">
+      <ul class="itemBox__row itemBox__row--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">अ Next/Last</div>
@@ -321,7 +321,7 @@
         </li>
       </ul>
 
-      <div class="itemBox JS_itemBox--children itemBox--children">
+      <div class="itemBox JS_itemBox--children">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
             <div class="itemBox__cellInner">
