--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -31,7 +31,7 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildren">
+    <div class="itemBox JS_itemBox--children JS_selectionChildren">
       <ul class="itemBox__row itemBox__row--item JS_selectionTitleInclude">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
@@ -50,7 +50,7 @@
         </li>
       </ul>
 
-      <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenInclude">
+      <div class="itemBox JS_itemBox--children JS_selectionChildrenInclude">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell">
             <div class="itemBox__cellInner">
@@ -127,7 +127,7 @@
         </li>
       </ul>
 
-      <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenExclude">
+      <div class="itemBox JS_itemBox--children JS_selectionChildrenExclude">
         <div class="itemBoxTable">
           <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
@@ -207,7 +207,7 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_optionsChildren">
+    <div class="itemBox JS_itemBox--children JS_optionsChildren">
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell ">
           <div class="itemBox__cellInner">
