--- a/sass/old-pmx-temp.scss
+++ b/sass/old-pmx-temp.scss
@@ -136,3 +136,26 @@ sup {
 .footer {
   padding: 0 20px 20px;
 }
+
+
+
+
+
+.item-detail .tid-content h3, .item-detail .tid-content .newgrid h3 {
+  color: #285C9E;
+  font-size: 18px;
+  margin: 0;
+  padding: 0 0 20px;
+  border: 0;
+}
+.item-detail #item_upload_wrapper {
+  border: 0;
+}
+
+.newgrid dl {
+  width: auto;
+}
+
+.radio {
+  height: 20px;
+}
