--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -39,10 +39,11 @@
 @import "blocks/applicable-slider.css";
 
 // Components
+@import "components/field.css";
+@import "components/selector.css";
+@import "components/itembox.css";
 @import "components/breadcrumbs.css";
 @import "components/tabs.css";
-@import "components/itemBox.css";
-@import "components/selector.css";
 @import "components/link.css";
 @import "components/note.css";
 @import "components/multiSelector.css";
