--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -103,6 +103,147 @@
                             </div>
                             <div class="clear"></div>
                         </div>
+
+                        <div class="row">
+                          <div class="col col-6">
+
+                            <div id="CommentsTab_Content" class="tid-content">
+
+                              <ol id="commentList" class="comments">
+                                <li id="">
+                                  <div class="comment-col-container">
+                                    <div class="gravatar gravatar50 comment-left-col">
+                                      <img src="https://banner.kisspng.com/20180403/tbq/kisspng-avatar-computer-icons-user-profile-profile-5ac428ca018d64.4692238815228049380064.jpg" alt="Konstantin Kharlov" title="Konstantin Kharlov">
+                                    </div>
+                                    <div class="comment-right-col">
+                                      <div class="comment-heading-col-container">
+                                        <div class="comment-heading-left-col">
+                                          <h4><a><span>Konstantin Kharlov</span></a>&nbsp;<span class="comment-user-sep">|</span>&nbsp;<span class="time">3/02/2016</span> at <span class="time">9:17</span><a class="remove" href="#">remove</a></h4>
+                                        </div>
+                                      </div>
+                                      <div class="comment-data-container">
+                                        <p id="comment_191900" ipe_type="BigText" ipe_property="Description" ipe_object="ItemComment" class="hasipe" ipe_editmodeallowed="true" ipe_id="191900"><a class="focuscatcher" href="#" onclick="return false"></a>(<a target="new" href="/account/profile">Nick De Jaeger</a> was notified) attachment added (lets discuss it at education center meeting)&nbsp;</p>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </li>
+                              </ol>
+
+                              <div id="ctl00_PageContentPlaceHolder_ctl00_m_CommentsTab_comments_CreateNewComment" class="newgrid">
+                                <h3><span>Create new comment</span></h3>
+                                  <table class="commenth-col-container" cellspacing="0" cellpadding="0">
+                                    <tbody>
+                                      <tr>
+                                        <td class="commenth-left-col">
+                                          <div class="gravatar gravatar50 commenth-left-col">
+                                            <img src="https://banner.kisspng.com/20180403/tbq/kisspng-avatar-computer-icons-user-profile-profile-5ac428ca018d64.4692238815228049380064.jpg">
+                                          </div>
+                                        </td>
+                                        <td class="commenth-right-col">
+                                          <div class="ipeblock" id="">
+                                            <textarea class="full" cols="88" rows="3" id="NewCommentDescription"></textarea>
+                                            <div class="comments-notify-wrapper">
+                                              <div class="label">
+                                                <span id="ctl00_PageContentPlaceHolder_ctl00_m_CommentsTab_comments_Span5">Notify:</span>
+                                              </div>
+                                              <div class="picker">
+                                                <div class="solidinput haspicker" id="picker">
+                                                  <div class="newpicker person" id="Picker_16366034" options="hasSearch:true,hasInput:false,multiSelect:true,showLabel:true,closeGroups:false,listItemId:641589i">
+                                                    <span class="newpickerbutton">&nbsp;</span>
+                                                    <div class="newpickercontent-wrapper">
+                                                      <div class="newpickercontent-container">
+                                                        <div class="newpickercontent">
+                                                          <p class="inlinesearch">
+                                                            <input class="text empty" value="Search..." type="text">
+                                                          </p><!-- inlinesearch -->
+                                                          <ul id="ctl00_PageContentPlaceHolder_ctl00_m_CommentsTab_comments_personpicker_itemlist" class="monsterlist">
+                                                            <li id="null" class="addcontent">
+                                                              <label class="nonselectable"><span class="inner">no selections available</span></label>
+                                                            </li>
+                                                          </ul><!-- monsterlist -->
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                  <div class="pickerinput">
+                                                    <span class="noinput">&nbsp;</span>
+                                                    <input value="" class="text full invisible" type="text">
+                                                  </div><!-- pickerinput -->
+                                                </div><!-- solidinput -->
+                                              </div>
+                                            </div>
+                                            <div class="hasbuttons" style="padding-top:4px;" id="">
+                                                <a class="button save" id="CreateNewCommentButton" tabindex="-1"><span id="ctl00_PageContentPlaceHolder_ctl00_m_CommentsTab_comments_Span1">Save</span></a>
+                                                <span id="ctl00_PageContentPlaceHolder_ctl00_m_CommentsTab_comments_Span2"> or </span>
+                                                <a class="cancel" id="CancelNewCommentButton" tabindex="-1"><span id="ctl00_PageContentPlaceHolder_ctl00_m_CommentsTab_comments_Span3">Clear</span></a>
+                                            </div>
+                                          </div>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </div>
+                                  <div class="noprint newgrid">
+                                    <div class="comment-col-footer-button">
+                                      <a class="comment-expand button color-blue" tabindex="-1"><span>Expand all</span></a>
+                                    </div>
+                                  </div>
+                                  <div class="clear"></div>
+                                </div>
+
+                          </div><!-- /.col -->
+                          <div class="col col-6">
+
+                            <ol id="attachmentList" class="attachments"><li class="attachment" data-ft-file="qa_tagscats.jpg"><a class="remove" onclick="attachments.removeAttachment(this, 267016)" href="#"></a><a class="inner" target="_blank" href="/download/attachment/267016"><div class="file"><div class="thumbnail"><img src="https://tracker.tenforce.com/download/attachmentthumb/267016" alt="qa_tagscats.jpg"></div></div><div class="filename">qa_tagscats.jpg</div></a><div class="meta"><div class="filename">qa_tagscats.jpg</div><div id="attachmentComment_267016" class="description hasipe addcontent" title="Click here to edit" ipe_id="267016" ipe_type="BigText" ipe_property="LinkReason" ipe_editmodeallowed="true" ipe_object="ItemDocument"><a class="focuscatcher" href="#" onclick="return false"></a>Click here to edit</div><hr class="divider"><div class="uploaded-by">Uploaded by<div class="author"> <span>Konstantin Kharlov</span></div> <div class="date">on  <span class="time">3/02/2016 at 9:17</span></div></div><div class="filesize">0,19MB</div></div></li></ol>
+
+                            <div class="clear"></div>
+
+                            <div id="item_upload_wrapper" class="newgrid">
+                              <h3 id="ctl00_PageContentPlaceHolder_ctl00_m_AttachmentsTab_attachments_newAttachmentLabel">New attachment</h3>
+                              <dl>
+                      	        <dt class="label">
+                      	            <div class="radio"><span class="checked"><input id="fileAttachmentRadio" name="upload" checked="checked" style="opacity: 0;" type="radio"></span></div>
+                                      <span id="ctl00_PageContentPlaceHolder_ctl00_m_AttachmentsTab_attachments_Span1">File</span>
+                                  </dt>
+                      	        <dd class="value">
+                      	            <div id="upload_button" class="addcontent fixed">Click here to select a file</div>
+                      	        </dd>
+                      	        <dd class="clear">&nbsp;</dd>
+
+                      	        <dt class="label">
+                                      <div class="radio"><span class=""><input id="urlAttachmentRadio" name="upload" style="opacity: 0;" type="radio"></span></div>
+                                      <span id="ctl00_PageContentPlaceHolder_ctl00_m_AttachmentsTab_attachments_Span2">URL</span>
+                                  </dt>
+                                  <dd class="value">
+                                      <input id="urlAttachmentInput" class="text wide" type="text" placeholder="Urls start with https://, references to files start with \\servername\d.">
+                                  </dd>
+                                  <dd class="clear">&nbsp;</dd>
+
+                      	        <dt class="label">
+                      		        <label id="ctl00_PageContentPlaceHolder_ctl00_m_AttachmentsTab_attachments_Label1" for="fileDescription">Description</label>
+                      	        </dt>
+                      	        <dd class="value">
+                      		        <textarea id="fileDescription" cols="88" rows="5" class="full"></textarea>
+                      	        </dd>
+                      	        <dd class="clear">&nbsp;</dd>
+
+                      	        <dt class="label">&nbsp;</dt>
+                      	        <dd class="value">
+                      	            <p class="hasbuttons">
+                      	                <a class="button save" tabindex="-1">
+                      	                    <span id="ctl00_PageContentPlaceHolder_ctl00_m_AttachmentsTab_attachments_Span4">Add</span>
+                      	                </a>
+                      	            </p>
+                      	        </dd>
+                      	        <dd class="clear">&nbsp;</dd>
+
+                              </dl>
+                              <div class="dlclear">&nbsp;</div>
+                          </div>
+
+                          </div><!-- /.col -->
+                        </div><!-- /.row -->
+
                     </div>
 
                     <div class="tab-content" tab-name="solution" style="display: none;">
