--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,4 +1,4 @@
-<ul class="itemBox__row JS_filterableCell">
+<ul class="itemBox__row itemBox__row--item JS_filterableCell">
   <li class="itemBox__cell ${textActionClass}">
     ${newSelectedItemHTML}
   </li>
