--- a/_includes/javascript/selectedBlock-Exclude.html
+++ b/_includes/javascript/selectedBlock-Exclude.html
@@ -1,4 +1,4 @@
-<ul class="itemBox__row  JS_selectionTitleExclude">
+<ul class="itemBox__row itemBox__row--item JS_selectionTitleExclude">
   <li class="itemBox__cell itemBox__cell--action">
     <div class="itemBox__cellInner">
       <div class="itemBox__action">ऄ Exclude</div>
@@ -16,6 +16,6 @@
   </li>
 </ul>
 
-<div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenExclude">
+<div class="itemBox JS_itemBox--children JS_selectionChildrenExclude">
   <div class="itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable"></div>
 </div>
