update user menu , update comments/attachments

--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -12,9 +12,9 @@
     <div class="itemBox">
       {% for item in itemgroup %}
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--action itemBox__cell--permalink">
+        <li class="itemBox__cell itemBox__cell--permalink">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">{{item.icon}} {{item.name}}</div>
+            <div class="itemBox__value">{{item.icon}} {{item.name}}</div>
           </div>
         </li>
       </ul>
