update panel selectorreset

--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -41,7 +41,7 @@
 // Components
 @import "components/field.css";
 @import "components/selector.css";
-@import "components/itembox.css";
+@import "components/itemboxxx.css";
 @import "components/breadcrumbs.css";
 @import "components/tabs.css";
 @import "components/link.css";
