rearange comments/attachemnts

--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -109,34 +109,15 @@
 
                             <div id="CommentsTab_Content" class="tid-content">
 
+                              <h2 class="pagetitle">Comments</h2>
+
                               <div class="newgrid">
                                 <div class="comment-col-footer-button">
                                   <a class="comment-expand button color-blue" tabindex="-1"><span>Expand all</span></a>
                                 </div>
                               </div>
 
-                              <ol id="commentList" class="comments">
-                                <li id="">
-                                  <div class="comment-col-container">
-                                    <div class="gravatar gravatar50 comment-left-col">
-                                      <img src="https://banner.kisspng.com/20180403/tbq/kisspng-avatar-computer-icons-user-profile-profile-5ac428ca018d64.4692238815228049380064.jpg" alt="Konstantin Kharlov" title="Konstantin Kharlov">
-                                    </div>
-                                    <div class="comment-right-col">
-                                      <div class="comment-heading-col-container">
-                                        <div class="comment-heading-left-col">
-                                          <h4><a><span>Konstantin Kharlov</span></a>&nbsp;<span class="comment-user-sep">|</span>&nbsp;<span class="time">3/02/2016</span> at <span class="time">9:17</span><a class="remove" href="#">remove</a></h4>
-                                        </div>
-                                      </div>
-                                      <div class="comment-data-container">
-                                        <p id="comment_191900" ipe_type="BigText" ipe_property="Description" ipe_object="ItemComment" class="hasipe" ipe_editmodeallowed="true" ipe_id="191900"><a class="focuscatcher" href="#" onclick="return false"></a>(<a target="new" href="/account/profile">Nick De Jaeger</a> was notified) attachment added (lets discuss it at education center meeting)&nbsp;</p>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </li>
-                              </ol>
-
                               <div id="ctl00_PageContentPlaceHolder_ctl00_m_CommentsTab_comments_CreateNewComment" class="newgrid">
-                                <h3><span>Create new comment</span></h3>
                                   <table class="commenth-col-container" cellspacing="0" cellpadding="0">
                                     <tbody>
                                       <tr>
@@ -191,60 +172,40 @@
                                   </div>
 
                                   <div class="clear"></div>
+
+                              <ol id="commentList" class="comments">
+                                <li id="">
+                                  <div class="comment-col-container">
+                                    <div class="gravatar gravatar50 comment-left-col">
+                                      <img src="https://banner.kisspng.com/20180403/tbq/kisspng-avatar-computer-icons-user-profile-profile-5ac428ca018d64.4692238815228049380064.jpg" alt="Konstantin Kharlov" title="Konstantin Kharlov">
+                                    </div>
+                                    <div class="comment-right-col">
+                                      <div class="comment-heading-col-container">
+                                        <div class="comment-heading-left-col">
+                                          <h4><a><span>Konstantin Kharlov</span></a>&nbsp;<span class="comment-user-sep">|</span>&nbsp;<span class="time">3/02/2016</span> at <span class="time">9:17</span><a class="remove" href="#">remove</a></h4>
+                                        </div>
+                                      </div>
+                                      <div class="comment-data-container">
+                                        <p id="comment_191900" ipe_type="BigText" ipe_property="Description" ipe_object="ItemComment" class="hasipe" ipe_editmodeallowed="true" ipe_id="191900"><a class="focuscatcher" href="#" onclick="return false"></a>(<a target="new" href="/account/profile">Nick De Jaeger</a> was notified) attachment added (lets discuss it at education center meeting)&nbsp;</p>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </li>
+                              </ol>
+
+
+
+                                  <div class="clear"></div>
                                 </div>
 
                           </div><!-- /.col -->
                           <div class="col col-6">
 
-                            <ol id="attachmentList" class="attachments">
-                              <li class="attachment" data-ft-file="qa_tagscats.jpg">
-                                <a class="remove" onclick="attachments.removeAttachment(this, 267016)" href="#"></a>
-                                <a class="inner" target="_blank" href="/download/attachment/267016">
-                                  <div class="file">
-                                    <div class="thumbnail">
-                                      <img src="./assets/images/files.jpg" alt="qa_tagscats.jpg">
-                                    </div>
-                                  </div>
-                                  <div class="filename">qa_tagscats.jpg</div>
-                                </a>
-                                <div class="meta">
-                                  <div class="filename">qa_tagscats.jpg</div>
-                                  <div id="attachmentComment_267016" class="description hasipe addcontent" title="Click here to edit" ipe_id="267016" ipe_type="BigText" ipe_property="LinkReason" ipe_editmodeallowed="true" ipe_object="ItemDocument">
-                                    <a class="focuscatcher" href="#" onclick="return false"></a>Click here to edit
-                                  </div><hr class="divider">
-                                  <div class="uploaded-by">
-                                    Uploaded by<div class="author"> <span>Konstantin Kharlov</span></div> <div class="date">on  <span class="time">3/02/2016 at 9:17</span></div>
-                                  </div>
-                                  <div class="filesize">0,19MB</div>
-                                </div>
-                              </li>
-                              <li class="attachment" data-ft-file="qa_tagscats.jpg">
-                                <a class="remove" onclick="attachments.removeAttachment(this, 267016)" href="#"></a>
-                                <a class="inner" target="_blank" href="/download/attachment/267016">
-                                  <div class="file">
-                                    <div class="thumbnail">
-                                      <img src="./assets/images/files.jpg" alt="qa_tagscats.jpg">
-                                    </div>
-                                  </div>
-                                  <div class="filename">qa_tagscats.jpg</div>
-                                </a>
-                                <div class="meta">
-                                  <div class="filename">qa_tagscats.jpg</div>
-                                  <div id="attachmentComment_267016" class="description hasipe addcontent" title="Click here to edit" ipe_id="267016" ipe_type="BigText" ipe_property="LinkReason" ipe_editmodeallowed="true" ipe_object="ItemDocument">
-                                    <a class="focuscatcher" href="#" onclick="return false"></a>Click here to edit
-                                  </div><hr class="divider">
-                                  <div class="uploaded-by">
-                                    Uploaded by<div class="author"> <span>Konstantin Kharlov</span></div> <div class="date">on  <span class="time">3/02/2016 at 9:17</span></div>
-                                  </div>
-                                  <div class="filesize">0,19MB</div>
-                                </div>
-                              </li>
-                            </ol>
 
-                            <div class="clear"></div>
 
-                            <div id="item_upload_wrapper" class="newgrid">
-                              <h3 id="ctl00_PageContentPlaceHolder_ctl00_m_AttachmentsTab_attachments_newAttachmentLabel">New attachment</h3>
+                            <div id="item_upload_wrapper" class="newgrid tid-content">
+                              <h2 class="pagetitle">Attachments</h2>
+
                               <dl>
 
                                 <div class="row">
@@ -302,6 +263,55 @@
                               </dl>
                               <div class="dlclear">&nbsp;</div>
                           </div>
+
+                          <div class="clear"></div>
+
+                            <ol id="attachmentList" class="attachments">
+                              <li class="attachment" data-ft-file="qa_tagscats.jpg">
+                                <a class="remove" onclick="attachments.removeAttachment(this, 267016)" href="#"></a>
+                                <a class="inner" target="_blank" href="/download/attachment/267016">
+                                  <div class="file">
+                                    <div class="thumbnail">
+                                      <img src="./assets/images/files.jpg" alt="qa_tagscats.jpg">
+                                    </div>
+                                  </div>
+                                  <div class="filename">qa_tagscats.jpg</div>
+                                </a>
+                                <div class="meta">
+                                  <div class="filename">qa_tagscats.jpg</div>
+                                  <div id="attachmentComment_267016" class="description hasipe addcontent" title="Click here to edit" ipe_id="267016" ipe_type="BigText" ipe_property="LinkReason" ipe_editmodeallowed="true" ipe_object="ItemDocument">
+                                    <a class="focuscatcher" href="#" onclick="return false"></a>Click here to edit
+                                  </div><hr class="divider">
+                                  <div class="uploaded-by">
+                                    Uploaded by<div class="author"> <span>Konstantin Kharlov</span></div> <div class="date">on  <span class="time">3/02/2016 at 9:17</span></div>
+                                  </div>
+                                  <div class="filesize">0,19MB</div>
+                                </div>
+                              </li>
+                              <li class="attachment" data-ft-file="qa_tagscats.jpg">
+                                <a class="remove" onclick="attachments.removeAttachment(this, 267016)" href="#"></a>
+                                <a class="inner" target="_blank" href="/download/attachment/267016">
+                                  <div class="file">
+                                    <div class="thumbnail">
+                                      <img src="./assets/images/files.jpg" alt="qa_tagscats.jpg">
+                                    </div>
+                                  </div>
+                                  <div class="filename">qa_tagscats.jpg</div>
+                                </a>
+                                <div class="meta">
+                                  <div class="filename">qa_tagscats.jpg</div>
+                                  <div id="attachmentComment_267016" class="description hasipe addcontent" title="Click here to edit" ipe_id="267016" ipe_type="BigText" ipe_property="LinkReason" ipe_editmodeallowed="true" ipe_object="ItemDocument">
+                                    <a class="focuscatcher" href="#" onclick="return false"></a>Click here to edit
+                                  </div><hr class="divider">
+                                  <div class="uploaded-by">
+                                    Uploaded by<div class="author"> <span>Konstantin Kharlov</span></div> <div class="date">on  <span class="time">3/02/2016 at 9:17</span></div>
+                                  </div>
+                                  <div class="filesize">0,19MB</div>
+                                </div>
+                              </li>
+                            </ol>
+
+                            <div class="clear"></div>
 
                           </div><!-- /.col -->
                         </div><!-- /.row -->
