--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -64,7 +64,7 @@
       <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
     </li>
     <li class="itemBox__cell itemBox__cell--flex0">
-      <div class="itemBox__cellInner">
+      <div class="itemBox__cellInner animate--popup">
         <div class="itemBox__action itemBox__action--secondary">܌</div>
       </div>
     </li>
@@ -100,7 +100,7 @@
       </div>
     </li>
     <li class="itemBox__cell itemBox__cell--flex3">
-      <div class="itemBox__cellInner">
+      <div class="itemBox__cellInner animate--loading">
 
         <div class="selector selector--expanded">
           <div class="selector__item selector__item--selected">
@@ -114,7 +114,7 @@
     </li>
   </ul>
 
-  <div class="itemBox JS_itemBox--children">
+  <div class="itemBox animate--fadein JS_itemBox--children">
     <ul class="itemBox__row itemBox__row--h1">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
@@ -208,7 +208,7 @@
     </ul>
     {% include blocks/itembox-row.html %}
     {% for i in (1..2) %}
-      <ul class="itemBox__row itemBox__row--item">
+      <ul class="itemBox__row itemBox__row--item animate--loading">
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ऄ</div>
