--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup JS_multiSelector--simpleText JS_multiSelector--textAction" id="multiSelector-columnpicker">
+<div class="multiSelector JS_multiSelector--simpleText JS_multiSelector--textAction" id="multiSelector-columnpicker" style="margin-top: -50px;">
 
   <div class="itemBox JS_itemBox">
     <ul class="itemBox__row">
