--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup multiSelector--popup-breadcrumb " id="multiSelector-breadcrumb">
+<div class="multiSelector" id="multiSelector-breadcrumb">
 
   <div class="itemBox JS_itemBox">
     <ul class="itemBox__row">
