--- a/sass/framework.scss
+++ b/sass/framework.scss
@@ -19,46 +19,46 @@
     display: table;
     clear: both;
   }
+}
 
-  .col {
-    float: left;
+.col {
+  float: left;
 
-    &-1 {
-      width: 8.333332%;
-    }
-    &-2 {
-      width: 16.666667%;
-    }
-    &-3 {
-      width: 25%;
-    }
-    &-4 {
-      width: 33.333332%
-    }
-    &-5 {
-      width: auto;
-    }
-    &-6 {
-      width: 50%;
-    }
-    &-7 {
-      width: 58.333332%;
-    }
-    &-8 {
-      width: 66.666667%
-    }
-    &-9 {
-      width: 75%
-    }
-    &-10 {
-      width: 83.333332%;
-    }
-    &-11 {
-      width: 91.666667%;
-    }
-    &-12 {
-      width: 100%;
-    }
+  &-1 {
+    width: 8.333332%;
+  }
+  &-2 {
+    width: 16.666667%;
+  }
+  &-3 {
+    width: 25%;
+  }
+  &-4 {
+    width: 33.333332%
+  }
+  &-5 {
+    width: auto;
+  }
+  &-6 {
+    width: 50%;
+  }
+  &-7 {
+    width: 58.333332%;
+  }
+  &-8 {
+    width: 66.666667%
+  }
+  &-9 {
+    width: 75%
+  }
+  &-10 {
+    width: 83.333332%;
+  }
+  &-11 {
+    width: 91.666667%;
+  }
+  &-12 {
+    width: 100%;
   }
 }
 
@@ -72,6 +72,29 @@
 }
 .align-right {
   text-align: right;
+}
+
+.pin-l {
+  left: 0;
+  right: inherit;
+}
+.pin-r {
+  left: inherit;
+  right: 0;
+}
+
+/* Sizing */
+
+.w-full {
+  width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.w-half-screen {
+  width: 50vw;
 }
 
 /* Fonts */
@@ -141,14 +164,78 @@
   text-align: center;
 }
 
-/* States */
+/* Animations */
 
-.loading {
-
+@keyframes animate-loading {
+  0% {
+      background-position: 0 0;
+  }
+  100% {
+      background-position: 80px 0;
+  }
+}
+@keyframes animate-popup {
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes animate-fadein {
+  100% {
+    opacity: 1;
+  }
 }
 
-.disabled {
+.animate {
+  &--loading {
+    &::before {
+      content: '';
+      position: absolute;
+      z-index: 2;
+      top: 0; right: 0; bottom: 0; left: 0;
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      background-size: 80px 80px;
+      background-image:
+        linear-gradient(
+          135deg,
+          rgba(200, 200, 200, .7) 0%,
+          rgba(200, 200, 200, .7) 10%,
+          transparent 40%,
+          rgba(200, 200, 200, .7) 50%,
+          rgba(200, 200, 200, .7) 60%,
+          transparent 90%,
+          rgba(200, 200, 200, .7) 100%
+        );
+      -webkit-animation: animate-loading 3s linear infinite;
+      -moz-animation: animate-loading 3s linear infinite;
+      animation: animate-loading 3s linear infinite;
+    }
+  }
 
+  &--popup {
+    animation: animate-popup .5s ease forwards;
+  }
+
+  &--fadein {
+    opacity: 0;
+    animation: animate-fadein 2s ease forwards;
+  }
+
+  &--save {
+
+  }
+}
+
+/* States */
+
+.disabled {
+  filter: saturate(.7);
+  opacity: .5;
+  pointer-events: none;
 }
 
 .saved {
