seperate seamsearch js in components

--- a/_layouts/future.html
+++ b/_layouts/future.html
@@ -9,15 +9,14 @@
 
     {% include foot.html %}
 
-    <!-- multiple scrollable content -->
+    <!-- Plugins -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/multipleScrollable.js"></script>
-    <!-- Sticky scroll -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
-    <!-- toggle panels -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
-    <!-- tabs -->
+
+    <!-- Components -->
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
-    <!-- breadcrumb -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
   </body>
 </html>
