--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -11,12 +11,14 @@
 
     {% include foot.html %}
 
-    <!-- Sticky scroll -->
+    <!-- Plugins -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
-    <!-- toggle panels -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
-    <!-- tabs -->
+
+    <!-- Components -->
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
+
     <!-- OLD COMPONENTS -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-tab.js"></script>
