--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -4,7 +4,7 @@
     <a href="/" class="action-icon font--action">ढ</a>
   </div>
   <div class="col col-6 align-right">
-    <a href="#" class="action-icon font--action JS_toggle-semsearch-1">ञ</a>
+    <a href="#" class="action-icon font--action JS_toggle-semsearch">ञ</a>
     <a href="#" class="action-icon font--action JS_toggle-user-menu">ज</a>
   </div>
 </div>
