--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -3,31 +3,18 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
 
-<!-- local jquery sticky plugin files -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.stickytableheaders.min.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.sticky.js"></script>
-
-<!-- OUR PLUGINS/COMPONENTS USED IN EVERY PAGE -->
-<!-- expand-collapse -->
+<!-- Plugins -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
-<!-- sublist closer -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sublist-closer.js"></script>
-<!-- selector -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
-<!-- filters -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
-<!-- sortable -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sortable.js"></script>
-<!-- new multiselect -->
+
+<!-- Components -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-<!-- new SingleSelect -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSingleSelect.js"></script>
-<!-- colorpicker -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
-<!-- calendar -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/calendar.js"></script>
-<!-- breadcrumbs -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
