--- a/_layouts/future.html
+++ b/_layouts/future.html
@@ -9,10 +9,14 @@
 
     {% include foot.html %}
 
+    <!-- Libraries -->
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.stickytableheaders.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.sticky.js"></script>
+
     <!-- Plugins -->
-    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/multipleScrollable.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sticky.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/multipleScrollable.js"></script>
 
     <!-- Components -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
