--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -11,13 +11,18 @@
 
     {% include foot.html %}
 
+    <!-- Libraries -->
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.stickytableheaders.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.sticky.js"></script>
+
     <!-- Plugins -->
-    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sticky.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
 
     <!-- Components -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
 
     <!-- OLD COMPONENTS -->
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
