--- a/sass/app.scss
+++ b/sass/app.scss
@@ -2,9 +2,7 @@
 ---
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Source Sans Pro", "tenforce", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-family: 'tenforce', 'Source Sans Pro', Arial, sans-serif;
-  font-family: 'Source Sans Pro', 'tenforce', Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Source Sans Pro', 'tenforce', Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-kerning: normal;
   -webkit-font-variant-ligatures: no-common-ligatures;
   font-variant-ligatures: no-common-ligatures;
@@ -55,26 +53,10 @@ body {
   }
 }
 
-.app.overlay--visible .app__overlay,
-.app.add-comment--visible .app__overlay {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.add-comment--visible .document__comments .add-comment {
-  z-index: 999;
-  box-shadow: 0 0 100px rgba(0,0,0,.5);
-}
-
-
 input,
 textarea {
   &::-webkit-input-placeholder {
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #C1C1C1;
-    font-weight: 300;
     font-style: italic;
-    text-transform: none;
-    font-size: 16px;
+    opacity: .4;
   }
 }
