--- a/sass/framework.scss
+++ b/sass/framework.scss
@@ -201,15 +201,15 @@
       background-size: 80px 80px;
       background-image:
         linear-gradient(
-          135deg,
-          rgba(200, 200, 200, .7) 0%,
-          rgba(200, 200, 200, .7) 10%,
-          transparent 40%,
-          rgba(200, 200, 200, .7) 50%,
-          rgba(200, 200, 200, .7) 60%,
-          transparent 90%,
-          rgba(200, 200, 200, .7) 100%
-        );
+        135deg,
+        rgba(200,200,200,0.5) 0%,
+        rgba(200,200,200,0.5) 20%,
+        transparent 40%,
+        rgba(200,200,200,0.5) 50%,
+        rgba(200,200,200,0.5) 70%,
+        transparent 90%,
+        rgba(200,200,200,0.5) 100%
+      );
       -webkit-animation: animate-loading 3s linear infinite;
       -moz-animation: animate-loading 3s linear infinite;
       animation: animate-loading 3s linear infinite;
